fix: footer style (#198)
* fix(footer-logos): removed useless padding to one of the logos

* refactor(footer): added some line breaks on the documentation links to make the JSX more readable

* fix(footer): added some space between the "Investissements d'avenir" logo and its baseline

* refactor(fonts): removed unused font + replaced the font files with the ones used in the Istex website

* fix(fonts): added explicit font weights to the fonts and fixed the footer menu text being thicker than the Istex website

--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -1,75 +1,28 @@
 /* FONTS STYLE */
 @font-face {
-  font-family: "Montserrat-Black";
-  src: url("/fonts/Montserrat/Montserrat-Black.ttf") format("truetype");
+  font-family: 'Montserrat-Regular';
+  src: url('/fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
 }
 
 @font-face {
-  font-family: "Montserrat-Bold";
-  src: url("/fonts/Montserrat/Montserrat-Bold.ttf") format("truetype");
+  font-family: 'Montserrat-Medium';
+  src: url('/fonts/Montserrat/Montserrat-Medium.ttf') format('truetype');
+  font-weight: 500;
 }
 
 @font-face {
-  font-family: "Montserrat-ExtraBold";
-  src: url("/fonts/Montserrat/Montserrat-ExtraBold.ttf") format("truetype");
+  font-family: 'Montserrat-SemiBold';
+  src: url('/fonts/Montserrat/Montserrat-SemiBold.ttf') format('truetype');
+  font-weight: 600;
 }
 
 @font-face {
-  font-family: "Montserrat-ExtraLight";
-  src: url("/fonts/Montserrat/Montserrat-ExtraLight.ttf") format("truetype");
+  font-family: 'Montserrat-Bold';
+  src: url('/fonts/Montserrat/Montserrat-Bold.ttf') format('truetype');
+  font-weight: bold;
 }
 
 @font-face {
-  font-family: "Montserrat-ExtraLightItalic";
-  src: url("/fonts/Montserrat/Montserrat-ExtraLightItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Montserrat-Italic";
-  src: url("/fonts/Montserrat/Montserrat-Italic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Montserrat-Light";
-  src: url("/fonts/Montserrat/Montserrat-Light.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Montserrat-Regular";
-  src: url("/fonts/Montserrat/Montserrat-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Montserrat-LightItalic";
-  src: url("/fonts/Montserrat/Montserrat-LightItalic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Montserrat-SemiBold";
-  src: url("/fonts/Montserrat/Montserrat-SemiBold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "Montserrat-Thin";
-  src: url("/fonts/Montserrat/Montserrat-Thin.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "OpenSans";
-  src: url("/fonts/OpenSans/OpenSans-Regular.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "OpenSans-Italic";
-  src: url("/fonts/OpenSans/OpenSans-Italic.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "OpenSans-Light";
-  src: url("/fonts/OpenSans/OpenSans-Light.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: "OpenSans-Bold";
-  src: url("/fonts/OpenSans/OpenSans-Bold.ttf") format("truetype");
+  font-family: 'OpenSans-Regular';
+  src: url('/fonts/OpenSans/OpenSans-Regular.ttf') format('truetype');
 }
